www/css/campjoy.css
@font-face {
    font-family: 'Rockwell';
    src: url('../fonts/RockwellStd.otf') format('opentype'), url('../fonts/RockwellStd.svg#RockwellStd') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Rockwell';
    src: url('../fonts/RockwellStd-Bold.otf') format('opentype'), url('../fonts/RockwellStd-Bold.svg#RockwellStd-Bold') format('svg');
    font-weight: bold;
    font-style: normal;
}
/*web fonts above HAVE TO BE FIRST!*/


/* App-wide */
*{
	font-family: 'Rockwell';
}

div {
	text-align: center;
}

.header {
	background: url(../images/header.png);
}
.footer {
	background: url(../images/footer.png);
}

.main, .customPanel {
	background: url(../images/background.png);
}

/* Home view */
.homeContainer {
	display: table;
	height: 350px;
	#position: relative;
	overflow: hidden;
}
.homeAbsolute {
	#position: absolute;
	#top: 50%;
	display: table-cell;
	vertical-align: middle;
}
.homeRelative {
	#position: relative;
	width:100%;
	margin-left:75px;
	#top: -50%;
}
.homeCircle {
	text-align:center;
	height:150px;
	width:150px;
	border-radius: 100px;
	border: solid 2px black;
	background-color:#fff;
}

/* Dichotomous Key */
.key-item {
	text-align: center;
	width: 100%;
	margin: 0px;
	padding: 15px 0;
	background: none;
	font-family: Courier;
	color: #27221b;
}

.key-option-or {
        text-align: center;
        width: 100%;
        margin: 0px;
}

.key-item img{
       height: 80px;
}

